@@ -7,17 +7,17 @@ AUX python-3.7-openssl-1.1.0.patch 6191 SHA256 51511303c9b959a7a3fedfc9743bab201
 AUX python-3.7.5-hashlib.patch 805 SHA256 8a24ac3fc69623b00530394e5a4d8416219c3b96a6021da1b4c6e87574edb562 SHA512 a08dc39290a1e254e2d76f70b989d8f8f1e6f5aee3ed12b5ff4325d878d025e05d3ccb6de78aa77f63ebb11846a12d7c07d79c7b8dd7804f1b5a6f3082dc992c WHIRLPOOL 6df07927543702f6c861f23b81986e4034479dfb6eecf6a9a8ab2bb1c49e4cacbea21ecaf66806abe556827cabad4711cf47cdb91876a8ca6c5af3886c2d593e
 AUX python-3.8-openssl-1.1.0.patch 6007 SHA256 31ce0abf8829bc04b025be14d6b063e2a82df7737377367dee15a8a4c323d48e SHA512 49aca56ee6fc573dd908d5b979ec5a8f430d3d6af6a2ca1544fb59eaadcc05c2af1d8c32d0028d2399b42ac4696e2dac59975ab36b9c10c5c49860e58e793c9f WHIRLPOOL 2c1df2606d097376c41ec4584d8ed87f3117105c2a1ec640ddb67cf27fe6df489f6390b2a7aa7dc4fdd67fc4fda0c70f38cd2e43c6765ab00cb1e31ac63ac688
 DIST Python-3.7.0.tar.xz 16922100 SHA256 0382996d1ee6aafe59763426cf0139ffebe36984474d0ec4126dd1c40a8b3549 SHA512 8bb11233fb67ee9ab8ed1b72f8fdc62f66e26a6beaaeb92448bce681cf065269833b1658d3ed2459127f25ba43adb0eab73cf27c59834a2a803fb529b4216739 WHIRLPOOL 0f771a48cfa5ef29989e8f151540b15856c8639ad991ca2f3e96c08d9c97674766f6ed4968a34308504d28da23a745fce9a9e3ee6583643a4ff69bce0fbfb294
-DIST Python-3.8.1.tar.xz 17828408 SHA256 75894117f6db7051c1b34f37410168844bbb357c139a8a10a352e9bf8be594e8 SHA512 d41381848cc1ec8009643b71875f395a9ac2c8e12a5b1efef33caf8a9e99a337c790d4354695c85352d11b62092ae372b5af62f78724363fcbf3504ff9a6ddca WHIRLPOOL f73cf507f0e33cc585d6539833f1ed3e639ce37a73024faade13567c023097e15f16a0099813ae768a1ac9c5a0bbc60faf2638d4d37208deaa9bd623ac771e99
+DIST Python-3.8.2.tar.xz 17869888 SHA256 2646e7dc233362f59714c6193017bb2d6f7b38d6ab4a0cb5fbac5c36c4d845df SHA512 ca37ad0e7c5845f5f228566aa8ff654a8f428c7d4a5aaabff29baebb0ca3219b31ba8bb2607f89e37cf3fc564f023b8407e53a4f2c47bd99122c1cc222613e37 WHIRLPOOL 94bd1aa25ed46d2e163ea823be9803742529c288a8a82f9970cda058145c0a2ce5b2038131c93f69bfee7d6cba67ea2c068d1290b5a865f1348221efa2adbb66
 DIST python-gentoo-patches-3.7.0.tar.xz 12268 SHA256 6f811a6a73bdf77a988456502b176732fa29739c457e4d3634af0ead450da8aa SHA512 19dd5bac06bb40622e74e3b16c7fba83f1178417e686eaf61b2b207602c76beebc8c78d675e401ec4d18add1ca033fd47baf2e48e9abb487593b7d821bcaf509 WHIRLPOOL 8a537a15d9c69f8e317edfd91eb2a155764d19a56d2763e65868aa8aae405c63983c598212874af25651d897ff2601e2fb27c4e178a1b3a53fd1a5430ab38551
-DIST python-gentoo-patches-3.8.0.tar.xz 9788 SHA256 7ba7d1c3f49f952ad844b9d7cb8716d60eb1f76a169ab80a55387cef183e539a SHA512 946be0babc8c67586309b48bffb5ac0a2a354b3798fa7e23c641cc836ff310ab744d75308d1324e9ed54720bf9f4d0aba1f89fb454a98bf9b9fa9484210b6ca5 WHIRLPOOL 52f2b4636a1fdec459564835baa33658c9fce655ac3556a91a1a18c07dc38417901903d62a0f37c4757a1114aa5b8b02f32c9a527ce415bf080f512636febf7e
+DIST python-gentoo-patches-3.8.2.tar.xz 16156 SHA256 ade15aeea0e40a65d3de6f75867823eea5e5bee9b751cd94bbcbb918ec052264 SHA512 0a54b51a9c672c3fafa5507829b826ebce08aa8d0542d04008ff1743366a7abd18a6df93a1b2d61cc31bb9a555681f67f176e48c061e8d6d825cabf2411c9f8c WHIRLPOOL fcce3cb44b3cae86d9612110d4dc462a0da656c1181808ce54ca548b09f810b5e748799992581fafa1ad14249fd4b340e3aa1ce31095670851fd3dc9f1374d1a
 EBUILD python-3.7.0.ebuild 9618 SHA256 2e5e314dc9502691eb6ed96bdfec90d1eae6ffb44806fa53df4e1000656efe01 SHA512 0c0795c25d49d308d701b0508fadfac141b27ca2e3eee25925c3f33c83178c9e13e587bdbb00f24f5abb3757fb7a03ff13a26b3ae0126a23d333174d42d32fe7 WHIRLPOOL a0c0dc0e78a8cbd0300e7bf6e8ff38e76ddc0c496c45f3346f8980168269bbd70e474337c1e444025b0bdbc366649fe3766f25d2de151373cbf578e72240e593
-EBUILD python-3.8.1.ebuild 9713 SHA256 a05721683bcaf452d326205194d7a47229aa5e5b777635780b201062c9764c4d SHA512 657759a67230cfac48984e150eaab96bb553d19f2203dd637c839d01dfeb20b0c2bb94e389f2972b1a5601f7244749ddc7ea85f7f672bfd24632bbf103bcf2bc WHIRLPOOL 8cc6ed276da5d2fa60ded75d6d75bf519a2026e472e61064562dbbc46bbaeeacdba0846851a7c50399c2051411056e30eba7eb7f1d22fcf05846ec445c47e3ce
-MISC ChangeLog 591 SHA256 382528a8a80b30ddcd4a253c8ab0b91b3cbd2249a10d7c4337d7c01288712d52 SHA512 bff6f7001af5afff7cb2003b85d07e3f011c6d3c6130dc527e80e7762855d6685556edbc868eb2a9f1bbc4c6264f0a4e7fc95626df911db4959e72fa560eb365 WHIRLPOOL af8a599b414047c8bef50d9442f01aba02f8a2a40eaf02b146a3a05e23b8b7cc855a3cd1d497ad63a3a0c911276514ff08c9776be41a45278ca3956f3f89a8fa
+EBUILD python-3.8.2-r2.ebuild 9904 SHA256 89e7836ee2d251f32738bcb4a0b136fa468904c8faf69c8e5ae034de1162656f SHA512 909de700b52b3ae87822add24fb3f129fd4262f4a4bacf5e9138b73808fb4dd20bebfedaf0e1d86c38078e8de2443b6e2b785c9a2891a89994092d057d28008c WHIRLPOOL 819406d4a5efe1ec35b06fe421dedd5496fea3ef388e7c834ca277dcd39d153e587c26f3749f6e99fb9f7cc3ecf5df7ffd8800031c40465397ff836f675bed06
+MISC ChangeLog 783 SHA256 ecabb9ccdcdd8127acd87f7b61209ff1384c1b0bd709646cf7557e3a14f62107 SHA512 2765ea1e8958257fd47292a89995f520e9e05c787bfe05831365e62b388c312ec09c41afcd2c7bccc2c27e5024085f29de495fd304b3d0a7cdecbfaaa9471628 WHIRLPOOL b1b9fc2c79a3389e810b3f3d5f90ee05de09849c91ff68439b062e00197599c68e05d5044aa2fe4c89de0eca3a407ffb5269ad7ebd592833a7d151352316c43d
 MISC metadata.xml 446 SHA256 6e6cc8a88443534f67c2e48acc961c40b6b81f8e33356abe24b56080a2614836 SHA512 6251ac1d67b25656a95b345670a9e097c4c9685a05369142f707417c8feb283e3b4c0e9f5e992eebb7c8a89c5b12e232fea81c11b0e3516bc9aeae4ceaf6cb59 WHIRLPOOL 9a5cfa611d2fca7ce0aca4e64ccef86668e5af444678b6686f98f0c6dac2ccfbc5b94ecfe7e6da912cb918e0c80cd620fa5ae7709cd4b600e47330c4fa627e06
 -----BEGIN PGP SIGNATURE-----
 
-iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCXgFELAAKCRDP2g+bNZZC
-IqOiAQCLVRFtLiHj1a6SawE+AzfYC7CfuJQ9vk/tI6SYitBs6wD/dbtMqDe5Izst
-R5PBEf1LPZCYTmENKEnSkJ7iOz3KFAc=
-=OyTr
+iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCXqZr9gAKCRDP2g+bNZZC
+IuHtAQCustgOsZ7Z+pZbotSVqN+JbwJ2VN+z5MWbog5zuBSPYwD7BOXTjSUTNZAY
+xB5UusOLkmikjRpPMxxT0uAfu0WfwwI=
+=O5vS
 -----END PGP SIGNATURE-----
