@@ -1,3 +1,9 @@
+*python-3.8.2-r2 (27 Apr 2020)
+
+  27 Apr 2020; Andrew John Hughes <gnu_andrew@member.fsf.org>
+  +python-3.8.2-r2.ebuild, -python-3.8.1.ebuild:
+  dev-lang/python: Update 3.8 version to 3.8.2.
+
 *python-3.8.1 (23 Dec 2019)
 
   23 Dec 2019; Andrew John Hughes <gnu_andrew@member.fsf.org>
